--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [tool.poetry]
-name = "phonehelper"
+name = "phone-helper"
 version = "0.1.0"
-description = "Phone and birthdays notebook for my contacts"
+description = "save your contacts"
 authors = ["Viktor <asgardcasting@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.12"
-datetime = "5.5"
+python = "^3.12"
 
 
 [build-system]
